@startuml
'https://plantuml.com/sequence-diagram

Employee <|-- BaseEmployee
Employee <|-- HourlyEmployee
Employee <|-- CommissionEmployee
Employee <|-- SalariedEmployee

abstract class Employee{
- firstName: String
- lastName: String
- socialSecurityNumber: String
+ getFirstName(): String
+ getLastName(): String
+ getSocialSecurityNumber(): String
+ setFirstName(in firstName: String): void
+ setLastName(in lastName: String): void
+ setSocialSecurityNumber(in ssn: String): void
+ toString(): String
}

class BaseEmployee{
~ baseSalary: int
+ getBaseSalary(): int
+ setBaseSalary(in baseSalary: int): void
+ toString(): String
}

class HourlyEmployee{
~ wage: int
~ hoursWorked: int
+ getWage(): int
+ getHoursWorked(): int
+ setWage(in wage: int): void
+ setHoursWorked(in hoursWorked: int): void
+ toString(): String
}

class CommissionEmployee{
~ commissionRate: int
~ grossSales: int
+ getCommissionRate(): int
+ getGrossSales(): int
+ setCommissionRate(in commissionRate: int): void
+ setGrossSales(in grossSales: int): void
+ toString(): String
}

class SalariedEmployee{
~ weeklySalary: int
+ getWeeklySalary(): int
+ setWeeklySalary(in weeklySalary: int): void
+ toString(): String
}
@enduml